--- a/rmsse.Rmd
+++ b/rmsse.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "MPE Loss Function"
+title: "Root Mean Squared Storage Error (RMSSE) - template"
 author: "Benjamin Preston"
 date: "2024-08-28"
 output: html_document
